--- a/css/styles.css
+++ b/css/styles.css
@@ -1,34 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
+@import "reset.css";
+@import "status-bar.css";
 
 body {
     /* font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Dosis', sans-serif;
 }
 
-.status-bar {
-    display: flex;
-    justify-content: center;    
-}
 
-.status-bar__column{
-    width: 33%;
-}
-
-.status-bar__column:first-child span {
-    margin-right: 5px;
-}
-
-.status-bar__column:nth-child(2) {
-    display: flex;
-    justify-content: center;
-}
-
-.status-bar__column:last-child {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.status-bar__column .fa-battery-full {
-    margin: 0px 5px;
+#login-form > input {
+    font-family: 'Dosis', sans-serif;
 }
