--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -2,11 +2,13 @@
 .status-bar {
     display: flex;
     justify-content: center;  
+    align-items: center;
     padding: 5px 3px;  
 }
 
 .status-bar__column{
     width: 33%;
+    font-weight: bold;
 }
 
 .status-bar__column:first-child span {
