--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Dosis&display=swap');
 @import "reset.css";
-@import "status-bar.css";
+@import "variables.css";
+
+/* Components */
+@import "components/status-bar.css";
+@import "components/nav-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
     /* font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
     font-family: 'Dosis', sans-serif;
-}
-
-
-#login-form > input {
-    font-family: 'Dosis', sans-serif;
+    background-color: var(--background-color);
 }
