--- a/css/variables.css
+++ b/css/variables.css
@@ -1,4 +1,6 @@
 :root {
-    --main-color: #7FC5DC;
-    --background-color: #4888C8;
+    --main-color: #c8dbd9;
+    --background-color: #4a7c59;
+    --notification: #8fc0a9;
 }
+
