--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,10 +1,48 @@
 .nav__list {
-    background-color: cyan;
-    padding: 20px 40px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #68b0ab;
+    padding: 20px 50px;
+    box-sizing: border-box;
+    border-top: 2px solid rgba(121, 121, 121, 0.3);
 }
 
 .nav__list {
     display: flex;
     justify-content: space-between;
+
+}
+
+.nav__link {
+    position: relative;
+    color: #2e363e;
+}
+
+.nav__notification {
+    background-color: var(--notification);
+    width: 30px;
+    height: 30px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-weight: 600;
+    position: absolute;
+    left: 15px;
+    bottom: 16px;
+    /* display: block; */
+}
+
+.nav__new-notification {
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background-color: tomato;
+    display: block;
+    position: absolute;
+    left: 33px;
+    bottom: 25px;
 
 }
