--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -1,5 +1,9 @@
 
 .status-bar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
     justify-content: center;  
     align-items: center;
