--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -19,20 +19,23 @@
     color: #2e363e;
 }
 
+@keyframes notificationAnimation {
+  0% {
+    transform: none;
+  }
+  50% {
+    transform: translateY(-5px) rotateY(360deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
 .nav__notification {
-    background-color: var(--notification);
-    width: 30px;
-    height: 30px;
-    border-radius: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-weight: 600;
     position: absolute;
     left: 15px;
     bottom: 16px;
-    /* display: block; */
+    animation: notificationAnimation 2s ease-in-out infinite;
 }
 
 .nav__new-notification {
@@ -44,5 +47,66 @@
     position: absolute;
     left: 33px;
     bottom: 25px;
+    transform: translateX(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 2s ease-in-out forwards;
 
+}
+
+@keyframes appearBtnAnimation {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+        transform: none;
+    }
+}
+
+
+.nav__new-notification1 {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: tomato;
+    display: block;
+    position: absolute;
+    left: 100px;
+    bottom: 18px;
+
+    transform: translateX(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 2s ease-in-out forwards;
+
+}
+
+.nav__new-notification2 {
+    width: 4px;
+    height: 4px;
+    border-radius: 50%;
+    background-color: tomato;
+    display: block;
+    position: absolute;
+    left: 150px;
+    bottom: 18px;
+     transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 4s ease-in-out forwards;
+}
+
+  
+.nav__btn {
+    transform: translateY(50px);
+    opacity: 0;
+    animation: appearBtnAnimation 0.3s ease-in-out forwards;
+}
+  
+.nav__btn:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.nav__btn:nth-child(3) {
+    animation-delay: 0.6s;
+}
+.nav__btn:last-child {
+    animation-delay: 0.9s;
 }
