--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -8,6 +8,8 @@
     justify-content: center;  
     align-items: center;
     padding: 5px 3px;  
+    background-color: #c8d5b9;
+    z-index: 2;
 }
 
 .status-bar__column{
