--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -4,6 +4,7 @@
 
 .user-component{
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 
 .user-component,
@@ -26,6 +27,7 @@
 
 .user-component__subtitle {
     margin-top: 8px;
+    margin-bottom: 3px;
     font-size: 17px;
     color: rgba(0, 0, 0, 0.5);
 }
@@ -45,15 +47,75 @@
     font-weight: 400;
 }
 
-.friends-screen__channel {
-    margin-top: 25px;
-    border-top: 1px solid rgba(0, 0, 0, 0.2);
-    padding-top: 15px;
+.user-component__column:last-child {
+    color: rgba(0, 0, 0, 0.7);
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
 }
 
-.friends-screen__channel-header {
-    margin-bottom: 30px;
+.user-component__column-ad {
     display: flex;
-    justify-content: space-between;
-    color: #8fc0a9;
+}
+
+.user-component__song {
+    color: wheat;
+    border: 1px solid tomato;
+    padding: 5px 10px;
+    border-radius: 15px;
+}
+
+.user-component__channel-profile {
+    background-color: #c8d5b9;
+    display: flex;
+    /* text-align: center; */
+    align-items: center;
+    position: relative;
+    justify-content: center;
+}
+
+.user-component__ch {
+    color: wheat;
+    position: absolute;
+    font-size: 13px;
+}
+
+.user-component__ad {
+    border: 1px solid wheat;
+    color: wheat;
+    border-radius: 50%;
+    padding: 3px;
+    font-size: 6px;
+    position: relative;
+    top: -20px;
+    right: -140px;
+    margin-bottom: 3;
+}
+
+.user-component-ad {
+    margin-top: -10px;
+}
+
+.user-component__time {
+    margin-bottom: 10px;
+    display: block;
+}
+
+.user-component__text {
+    position: relative;
+}
+
+.user-component__error {
+    border: var(--main-border);
+    border-color: tomato;
+    color: tomato;
+    border-radius: 50%;
+    height: 15px;
+    width: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    bottom: 3px;
+    right: -25px;
 }
