--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -5,6 +5,7 @@
     padding: 15px 0px;
     font-size: 18px;
     margin-bottom: 10px;
+    margin-top: -15px;
 }
 
 #friends-display-link i {
@@ -13,4 +14,64 @@
 
 .friends-screen {
     padding:  0px var(--horizontal-space);
+}
+
+.friends-screen__channel,
+.friends-screen__friends {
+    margin-top: 25px;
+    border-top: 1px solid rgba(0, 0, 0, 0.2);
+    padding-top: 15px;
+}
+
+.friends-screen__channel-header,
+.friends-screen__friends-header {
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    color: #8fc0a9;
+}
+
+@keyframes hideSplashScreen {
+    from {
+      opacity: 1;
+    }
+    to {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
+
+#splash-screen {
+    background-color: var(--main-color);
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 132px;
+    color: #68b0ab;
+    animation: hideSplashScreen 1s ease-in-out forwards;
+    animation-delay: 1.5s;
+    display: flex;
+    flex-direction: column;
+}
+
+#splash-screen h4 {
+    font-size: 26px;
+    margin-top: 40px;
+}
+
+@keyframes spin {
+    from {
+        transform:rotate(0deg);
+    }
+    to {
+        transform:rotate(360deg);
+    }
+}
+
+#splash-screen i {
+    animation: spin 0.9s ease-in-out;
 }
